--- a/client/global.css
+++ b/client/global.css
@@ -22,6 +22,11 @@
   animation-play-state: paused;
 }
 
+/* Custom duration for hero carousel fade */
+.duration-1500 {
+  transition-duration: 1500ms;
+}
+
 @layer base {
   /**
    * Tailwind CSS theme
